[project]
name = "debugger"
version = "0.1.0"
description = "debugger using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]==0.80.0",
    "onnxruntime==1.15.0",
    "socksio==1.0.0",
    "pyarrow==17.0.0",
    "greenlet==2.0.2"
]

[project.scripts]
debugger = "debugger.main:run"
run_crew = "debugger.main:run"
train = "debugger.main:train"
replay = "debugger.main:replay"
test = "debugger.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
